fix: show add todo plus without hover on smaller devices

--- a/client/src/styles/TodosHeader.scss
+++ b/client/src/styles/TodosHeader.scss
@@ -25,3 +25,9 @@
   backface-visibility: hidden;
   transition: opacity 100ms ease;
 }
+
+@media screen and (max-width: 760px) {
+  .plus {
+    opacity: 1;
+  }
+}
